# open-wealth-management

./: LICENSE  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/clients/: woob_client.py
backend/app/models/db/: database.py  item.py
backend/app/models/dto/: item_dto.py  summary_dto.py
backend/app/routers/: refresh.py  summary_route.py
backend/app/services/: refresh_service.py  summary_service.py
backend/migrations/: V1__create_items_table.sql  flyway.conf
backend/tests/: test_items.py
